--- a/app/index.html
+++ b/app/index.html
@@ -23,5 +23,6 @@
     <script src="bower_components/angular-animate/angular-animate.min.js"></script>
     <script src="bower_components/angular-route/angular-route.min.js"></script>
     <script src="js/master.js"></script>
+    <script src="js/controllers.js"></script>
   </body>
 </html>
