added from yesterady's work

--- a/app/index.html
+++ b/app/index.html
@@ -19,6 +19,10 @@
       <header>
           <h1 class="text-center">Countries &amp; Capitals</h1>
       </header>
+      <main class="animate-view-container">
+          <section class="animate-view" ng-view>
+          </section>
+      </main>
 
     <script src="bower_components/jquery/dist/jquery.min.js"></script>
     <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
