reworked until tomorrow

--- a/app/pages/countries.html
+++ b/app/pages/countries.html
@@ -13,7 +13,7 @@
             </thead>
             <tbody>
                 <tr ng-repeat="country in countries | orderBy: 'name'">
-                    <td><a href="#/countries/:country/capital">{{country.countryName}}</a></td>
+                    <td><a href="#/countries/{{country.countryName}}/capital">{{country.countryName}}</a></td>
                     <td>{{country.countryCode}}</td>
                     <td>{{country.capital}}</td>
                     <td>{{country.areaInSqKm | number}} km<sup>2</sup></td>
