--- a/app/pages/capital.html
+++ b/app/pages/capital.html
@@ -1,3 +1,6 @@
 <div class="container">
-<h1>{{message}}</h1>
+<h1>{{country}}</h1>
+<h2>{{countryCode}}</h2>
+<h2>{{continent}}</h2>
+<img ng-src="http://www.geonames.org/img/country/250/{{countryCode}}.png" alt="" />
 </div>
