--- a/app/index.html
+++ b/app/index.html
@@ -18,6 +18,10 @@
   <body>
       <header>
           <h1 class="text-center">Countries &amp; Capitals</h1>
+          <ul class="list-inline text-center">
+              <li><a href="#/">Home</a></li>
+              <li><a href="#/countries">Countries</a></li>
+          </ul>
       </header>
       <main class="animate-view-container">
           <section class="animate-view" ng-view>
