reworked for office hour

--- a/app/pages/capital.html
+++ b/app/pages/capital.html
@@ -1,6 +1,6 @@
 <div class="container">
 <h1>{{country}}</h1>
 <h2>{{population | number}}</h2>
-<h2>{{continent}}</h2>
+<h2>{{fcode}}</h2>
 <img ng-src="http://www.geonames.org/img/country/250/{{countryCode}}.png" alt="" />
 </div>
