--- a/app/pages/capital.html
+++ b/app/pages/capital.html
@@ -1,11 +1,21 @@
 <div class="container">
-<h1>{{country}}</h1>
-<h2>{{population | number}}</h2>
-<h2>{{area | number}}</h2>
-<h2>{{capital}}</h2>
-<div ng-repeat="neighbor in neighbours">
-    <a ng-href="#/countries/{{neighbor.countryName}}/{{neighbor.countryCode}}/{{continent}}/{{neighbor.population}}">{{neighbor.countryName}}</a>
-</div>
-<img ng-src="http://www.geonames.org/img/country/250/{{countryCode}}.png" alt="" />
-<img ng-src="http://www.geonames.org/flags/x/{{countryCode | lowercase}}.gif" alt="" />
+    <div class="full-width">
+        <h1>{{country}}</h1>
+        <p class="lead">Population: <span>{{population | number}}</span></p>
+        <p class="lead">Area: <span>{{area | number}}</span> square km <sup>2</sup></p>
+        <p class="lead">Capital: <span>{{capital}}</span></p>
+        <p class="lead">Population of Capital: <span>{{capitalPopulation | number}}</span> live here</p>
+        <p class="lead">
+            {{numOfNeighbors}} Neightbours:
+        </p>
+        <ul ng-repeat="neighbor in neighbours">
+            <a ng-href="#/countries/{{neighbor.countryName}}/{{neighbor.countryCode}}/{{continent}}/{{neighbor.population}}/{{area}}/{{capital}}">{{neighbor.countryName}}</a>
+        </ul>
+        <ul>
+            <li><img ng-src="http://www.geonames.org/img/country/250/{{countryCode}}.png" alt="" /></li>
+            <li><img ng-src="http://www.geonames.org/flags/x/{{countryCode | lowercase}}.gif" alt="" /></li>
+        </ul>
+        <a href="#/" class="btn btn-home center-block">HOME</a>
+        <a href="#/countries" class="btn btn-home center-block">Browse Countries</a>
+    </div>
 </div>
